--- a/Autoservice156MAUI/Views/Service/ServiceListPage.xaml
+++ b/Autoservice156MAUI/Views/Service/ServiceListPage.xaml
@@ -3,10 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Autoservice156MAUI.Views.Service.ServiceListPage"
              Title="ServiceListPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout HorizontalOptions="Center" 
+                         VerticalOptions="Center"
+                         Spacing="20">
+        <Label Text="🚗" FontSize="60"/>
+        <Label Text="Страница транспорта" 
+               FontSize="20"
+               FontAttributes="Bold"/>
+        <Label Text="Здесь будет список транспортных средств"
+               TextColor="#666666"/>
     </VerticalStackLayout>
 </ContentPage>
