--- a/Autoservice156MAUI/Views/Vehicle/VehicleEditPage.xaml
+++ b/Autoservice156MAUI/Views/Vehicle/VehicleEditPage.xaml
@@ -2,7 +2,11 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Autoservice156MAUI.Views.Vehicle.VehicleEditPage"
-             Title="Транспорт">
+             Title="Добавить транспорт">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Назад" Clicked="OnCancelClicked" />
+    </ContentPage.ToolbarItems>
 
     <ScrollView>
         <VerticalStackLayout Spacing="15" Padding="20">
@@ -13,11 +17,11 @@
                    HorizontalOptions="Center" />
 
             <Entry x:Name="BrandEntry"
-                   Placeholder="Марка"
+                   Placeholder="Марка *"
                    Margin="0,10,0,0" />
 
             <Entry x:Name="ModelEntry"
-                   Placeholder="Модель" />
+                   Placeholder="Модель *" />
 
             <Entry x:Name="YearEntry"
                    Placeholder="Год"
@@ -29,21 +33,25 @@
             <Entry x:Name="VINEntry"
                    Placeholder="VIN номер" />
 
-            <Grid ColumnDefinitions="*,*" ColumnSpacing="10" Padding="0,20,0,0">
+            <Grid ColumnDefinitions="*,*" 
+                  ColumnSpacing="10" 
+                  Padding="0,20,0,0"
+                  HorizontalOptions="Fill">
                 <Button Grid.Column="0"
                         Text="Отмена"
                         Clicked="OnCancelClicked"
                         BackgroundColor="LightGray"
-                        TextColor="Black" />
+                        TextColor="Black"
+                        HeightRequest="45" />
 
                 <Button Grid.Column="1"
                         Text="Сохранить"
                         Clicked="OnSaveClicked"
                         BackgroundColor="#512BD4"
-                        TextColor="White" />
+                        TextColor="White"
+                        HeightRequest="45" />
             </Grid>
 
         </VerticalStackLayout>
     </ScrollView>
-
 </ContentPage>
